[package]
name = "poor-mans-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# revm = { git = "https://github.com/bluealloy/revm", features = [ "alloydb" ] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "0bb7604", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
    "consensus",
    "eips",
    "serde",
    "node-bindings",
] }
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["full"] }
# revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "42f01d0" }

revm-inspectors = { path = "../evm-inspectors" }
# [patch."https://github.com/bluealloy/revm"]
revm = { path = "../revm/crates/revm", features = [
    "alloydb",
    "serde-json",
    "memory_limit",
    "optional_block_gas_limit",
    "optional_eip3607",
]}

