[package]
name = "poor-mans-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["full"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "0bb7604", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
    "consensus",
    "eips",
    "serde",
    "node-bindings",
] }

# Below are forks of the original projects in order to temporarly fix dependency issues
revm-inspectors = { git = "https://github.com/halo3mic/evm-inspectors", branch = "dep_fix_temp" }
revm = { git = "https://github.com/halo3mic/revm", branch = "alloy_0bb7604", features = [
    "alloydb",
    "serde-json",
    "memory_limit",
    "optional_block_gas_limit",
    "optional_eip3607",
]}

