[package]
name = "poor-mans-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["full"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4316c68", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
    "consensus",
    "eips",
    "serde",
    "node-bindings",
] }

# Below are forks of the original projects in order to temporarly fix dependency issues
revm-inspectors = { git = "https://github.com/halo3mic/evm-inspectors", rev = "e09675c" }
revm = { git = "https://github.com/halo3mic/revm", rev = "d4941f7", features = [
    "optional_block_gas_limit",
    "optional_eip3607",
    "memory_limit",
    "serde-json",
    "alloydb",
    "optimism",
]}
serde_json = { version = "1.0.116", optional = true }

[features]
examples = ["serde_json"]

[[example]]
name = "geth_struct_trace"
path = "examples/geth_struct_trace.rs"
required-features = ["examples"]
